crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__pub_const_with_expression.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        PublicConstInit(
            (
                true,
                5..8,
            ),
            (
                "const",
                9..14,
            ),
            (
                "GREETING",
                15..23,
            ),
            (
                Text(
                    [
                        (
                            Text(
                                (
                                    "Hello, World!",
                                    27..40,
                                ),
                            ),
                            27..40,
                        ),
                    ],
                ),
                26..41,
            ),
        ),
        5..41,
    ),
    (
        PublicConstInit(
            (
                true,
                46..49,
            ),
            (
                "const",
                50..55,
            ),
            (
                "LIMIT",
                56..61,
            ),
            (
                Add(
                    (
                        Int(
                            (
                                10,
                                64..66,
                            ),
                        ),
                        64..66,
                    ),
                    (
                        Int(
                            (
                                5,
                                69..70,
                            ),
                        ),
                        69..70,
                    ),
                ),
                64..70,
            ),
        ),
        46..70,
    ),
]
