crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__pub_let_with_flag.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        PublicVarInit(
            [
                (
                    AllowPublicMutable,
                    5..28,
                ),
            ],
            (
                true,
                33..36,
            ),
            (
                "let",
                37..40,
            ),
            (
                "counter",
                41..48,
            ),
            (
                Expression(
                    (
                        Int(
                            (
                                0,
                                51..52,
                            ),
                        ),
                        51..52,
                    ),
                ),
                51..52,
            ),
        ),
        5..52,
    ),
]
