crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__pub_var_array_destruct_init.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        PublicVarArrayDestructInit(
            [
                (
                    AllowPublicMutable,
                    1..24,
                ),
            ],
            (
                true,
                25..28,
            ),
            (
                "let",
                29..32,
            ),
            [
                (
                    "a",
                    34..35,
                ),
                (
                    "b",
                    37..38,
                ),
            ],
            (
                Expression(
                    (
                        Array(
                            [
                                (
                                    Int(
                                        (
                                            1,
                                            43..44,
                                        ),
                                    ),
                                    43..44,
                                ),
                                (
                                    Int(
                                        (
                                            2,
                                            46..47,
                                        ),
                                    ),
                                    46..47,
                                ),
                            ],
                        ),
                        42..48,
                    ),
                ),
                42..48,
            ),
        ),
        1..48,
    ),
]
