crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__single_char.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(\"x\")"
---
[
    (
        Token(
            "x",
        ),
        0..1,
    ),
]
