crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__string_trailing_backslash.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(r#\"\"test\\\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "test",
        ),
        1..5,
    ),
    (
        Token(
            "\\\"",
        ),
        5..7,
    ),
]
