crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__test_block_without_name.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        TestBlock(
            (
                "test",
                5..9,
            ),
            None,
            [
                (
                    VariableInit(
                        (
                            "let",
                            20..23,
                        ),
                        (
                            "x",
                            24..25,
                        ),
                        (
                            Expression(
                                (
                                    Int(
                                        (
                                            1,
                                            28..29,
                                        ),
                                    ),
                                    28..29,
                                ),
                            ),
                            28..29,
                        ),
                    ),
                    20..29,
                ),
            ],
        ),
        5..35,
    ),
]
